centraliza mensagem de game over

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     position: absolute;
     bottom: 0;
     width: 80px;
-    animation: pipe-animation 1.5s infinite linear;
+    animation: pipe-animation 2s infinite linear;
 }
 
 .mario{
@@ -40,6 +40,9 @@
 
 .game-over{
     position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 300px;
     display: flex;
     align-items: center;
